--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     ],
     "require": {
         "php": ">=7.1.3",
+        "guzzlehttp/guzzle": "^6.3",
         "illuminate/http": "5.8.*",
         "illuminate/routing": "5.8.*",
         "illuminate/session": "5.8.*",
